--- a/index.html
+++ b/index.html
@@ -3,16 +3,14 @@
 <head>
     <title>Octocho</title>
     <link rel="stylesheet" href="css/main.css">
-    <style>
-    body {
-        background: #000;
-    }
-    </style>
 </head>
 <body>
     <div id="board"></div>
     <script src="vendor/three.js"></script>
     <script src="vendor/OrbitControls.js"></script>
+
+    <script src="src/utils/utils.js"></script>
+    <script src="src/entities/Peep.js"></script>
     <script src="src/main.js"></script>
     <script>
         octocho.init();
