clean up, add cube entity

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <script src="vendor/OrbitControls.js"></script>
 
     <script src="src/utils/utils.js"></script>
+    <script src="src/geom.js"></script>
+    <script src="src/entities/Cube.js"></script>
     <script src="src/entities/Peep.js"></script>
     <script src="src/main.js"></script>
     <script>
