--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src="src/geom.js"></script>
     <script src="src/entities/Cube.js"></script>
     <script src="src/entities/Peep.js"></script>
+    <script src="src/entities/Ladder.js"></script>
     <script src="src/main.js"></script>
     <script>
         octocho.init();
