--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script src="src/entities/Cube.js"></script>
     <script src="src/entities/Peep.js"></script>
     <script src="src/entities/Ladder.js"></script>
+    <script src="src/Level.js"></script>
     <script src="src/main.js"></script>
     <script>
         octocho.init();
